[gd_scene load_steps=2 format=3 uid="uid://oxdpjk0tmw2j"]

[ext_resource type="Script" uid="uid://cvua102x1ekqu" path="res://scripts/game_over.gd" id="1_xlotp"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xlotp")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="gameOverText" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -139.0
offset_right = 44.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
text = "Game Over
"

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -97.0
offset_right = 21.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
text = "score"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = 50.0
offset_right = 24.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="retryButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "retry"

[node name="mainButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "main"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -44.0
offset_right = 57.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
text = "Submit Name"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/retryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/mainButton" to="." method="_on_main_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer2/Button" to="." method="_on_button_pressed"]
